# easy_pybind

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  setup.py
example_project/: build.sh  setup.py
example_project/src/: example.cc  example_impl.cc  example_impl.h
src/: example.cc  main.py
src/easy_pybind/: file_contents.py  main.py
